--- a/package.json
+++ b/package.json
@@ -4,10 +4,13 @@
   "private": true,
   "dependencies": {
     "@googlemaps/react-wrapper": "^1.1.28",
+    "@react-google-maps/api": "^2.7.0",
     "@testing-library/jest-dom": "^5.16.3",
     "@testing-library/react": "^12.1.4",
     "@testing-library/user-event": "^13.5.0",
+    "axios": "^0.26.1",
     "bootstrap": "^5.1.3",
+    "cors": "^2.8.5",
     "mongoose": "^6.2.8",
     "react": "^17.0.2",
     "react-bootstrap": "^2.2.2",
